--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "12.2.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-select": "^5.4.0",
     "uuid": "^9.0.0",
     "zod": "^3.18.0"
   },
