--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.3.1",
+    "@react-google-maps/api": "^2.2.0",
     "axios": "^0.27.2",
     "next": "12.2.5",
     "react": "18.2.0",
