--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^4.3.1",
     "@react-google-maps/api": "^2.13.1",
     "axios": "^0.27.2",
+    "framer-motion": "^7.5.1",
     "lodash": "^4.17.21",
     "next": "12.2.5",
     "react": "18.2.0",
